Updates for flexbox global navigation

--- a/assets/sass/_imports.scss
+++ b/assets/sass/_imports.scss
@@ -1,6 +1,6 @@
 @import "mixins/modular-scale/_modular-scale";
 @import "mixins/mixins";
-@import "compass";
+//@import "compass";
 @import "_config";
 
 .myDIV,
